# sing-box-windows

./: .eslintignore  .gitignore  AGENTS.md  CLAUDE.md  CRUSH.md  GEMINI.md  LICENSE  README.md  README.zh.md  README_zh-CN.md  __unconfig_vite.config.ts  components.d.ts  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  installation_issue.md  performance_issue.md
.github/scripts/: extract-release-notes.js
.github/workflows/: promote-release.yml  release.yml  rust.yml
docs/: CHANGELOG.md  architecture.md  development.md  i18n.md  linux-adaptation-summary.md  linux-development.md  performance-optimization.md  release-playbook.md
scripts/: fetch-kernel.mjs  fetch-kernel.test.mjs  kernel-targets.mjs  kernel-targets.test.mjs  tauri-wrapper.mjs  tauri-wrapper.test.mjs
src/: AGENTS.md  App.vue  env.d.ts  lib.rs  main.ts
src-tauri/: AGENTS.md  Cargo.toml  app.desktop  cache.db  tauri.conf.json  tauri.linux.conf.json  tauri.macos.arm64.conf.json  tauri.macos.x64.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  lib.rs  lib.rs.bak  main.rs
src-tauri/src/app/: AGENTS.md  app_service.rs  constants.rs  kernel_service.rs  mod.rs  proxy_service.rs  subscription_service.rs  system_service.rs  update_service.rs
src-tauri/src/app/constants/: common.rs  core.rs  core.tests.rs  mod.rs  network.rs  system.rs
src-tauri/src/app/core/: event_relay.rs  kernel_auto_manage.rs  kernel_service.rs  mod.rs  proxy_service.rs  task_manager.rs  tun_profile.rs  websocket_relay.rs
src-tauri/src/app/core/kernel_service/: download.rs  embedded.rs  event.rs  guard.rs  import.rs  orchestrator.rs  runtime.rs  state.rs  state.tests.rs  status.rs  utils.rs  utils.tests.rs  versioning.rs
src-tauri/src/app/network/: mod.rs  subscription_service.rs  subscription_service.tests.rs
src-tauri/src/app/network/subscription_service/: auto_update.rs  helpers.rs  helpers.tests.rs  mode.rs  parser.rs  parser.tests.rs
src-tauri/src/app/singbox/: common.rs  common.tests.rs  config_generator.rs  config_generator.tests.rs  config_schema.rs  mod.rs  settings_patch.rs  settings_patch.tests.rs
src-tauri/src/app/storage/: database.rs  enhanced_storage_service.rs  error.rs  mod.rs  state_model.rs  storage_service.rs
src-tauri/src/app/system/: background_tasks.rs  backup_service.rs  backup_service.tests.rs  config_service.rs  config_service.tests.rs  mod.rs  startup_refresh_service.rs  sudo_service.rs  system_service.rs  update_service.rs  update_service.tests.rs
src-tauri/src/app/tray/: commands.rs  mod.rs  model.rs  service.rs  state.rs
src-tauri/src/config/: template.json
src-tauri/src/entity/: config_model.rs  github_model.rs  mod.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/process/: error.rs  manager.rs  mod.rs
src-tauri/src/utils/: app_util.rs  app_util.tests.rs  config_util.rs  file_util.rs  http_client.rs  log_util.rs  logger.rs  mod.rs  process_util.rs  process_util.tests.rs  proxy_util.rs
src/app/: app_service.rs
src/assets/: base.css  main.css  naive-ui-theme-overrides.json  page-layout.css
src/boot/: useAppBootstrap.ts
src/components/: LanguageSwitcher.vue  LazyComponent.vue  TunModeSwitch.vue  UpdateModal.vue  UpdateNotification.vue  VirtualList.vue
src/components/common/: PageHeader.vue  PortSettingsDialog.vue  StatusCard.vue
src/components/home/: ProxyModeCard.vue  StatusCard.vue  TrafficStatsCard.vue
src/components/layout/: Echarts.vue  Layout.vue  MainLayout.vue  TrafficChart.vue
src/components/layout/header/: HeaderLayout.vue
src/components/layout/main/: MainLayout.vue
src/components/layout/menu/: LayoutMenu.vue
src/components/system/: SudoPasswordModal.vue
src/composables/: useCleanup.ts  useKernelStatus.ts  usePageTheme.ts  useVirtualization.ts
src/constants/: events.ts  index.ts
src/locales/: en-US.ts  en.json  index.ts  ja-JP.ts  ru-RU.ts  ru.json  zh-CN.ts  zh.json
src/process/: mod.rs
src/router/: index.ts
src/services/: api.ts  backend-storage-service.ts  connection-service.ts  database-service.ts  event-service.ts  initialization-service.ts  invoke-client.ts  kernel-service-old.ts  kernel-service.ts  notification-service.ts  proxy-service.ts  rule-service.ts  subscription-service.ts  sudo-service.ts  system-service.ts  tauri-api.ts  tray-service.ts  websocket-service.ts
src/services/kernel/: lifecycle-controller.ts  status-cache.ts
src/services/tauri/: config.ts  index.ts  invoke-client.ts  kernel.ts  proxy.ts  subscription.ts  system.ts
src/stores/: AGENTS.md  AppStore.ts  README.md  StoreManager.ts  SubStore.ts  TrayStore.ts  counter.ts  index.ts  index_new.ts  infoStore.ts
src/stores/app/: AppStore.ts  LocaleStore.ts  SudoStore.ts  ThemeStore.ts  UpdateStore.ts  WindowStore.ts
src/stores/app/composables/: messaging.ts  persistence.ts
src/stores/kernel/: ConnectionStore.ts  KernelRuntimeStore.ts  KernelStore.ts  LogStore.ts  ProxyStore.ts  RulesStore.ts  TrafficStore.ts
src/stores/subscription/: SubStore.ts  types.ts
src/stores/system/: ServiceStore.ts
src/stores/tray/: TrayStore.ts
src/types/: api.ts  controller.ts  database.ts  events.ts  index.d.ts  models.ts
src/utils/: bundleAnalyzer.ts  codeSplitting.ts  index.ts  kernel-performance-tester.ts  memory-leak-fix.ts  memory-monitor.ts  memory-optimization.ts  mitt.ts  performance.ts  websocket-monitor.ts
src/views/: AboutView.vue  BlankView.vue  ConnectionsView.vue  HomeView.vue  LogView.vue  ProxyView.vue  RulesView.vue  ServiceInstallView.vue  SettingView.vue  SubView.vue
src/views/setting/: setting-options.ts  setting-shared.css  useAdvancedSettingsForm.ts  useKernelDownload.ts  useUpdateProgressListener.ts
src/views/setting/components/: SettingsAboutTab.vue  SettingsAdvancedTab.vue  SettingsBasicTab.vue  (+2 more)
src/views/sub/: subscription-utils.ts  useSubscriptionAutoUpdate.ts
