[package]
name = "sing-box-windows"
version = "2.0.0"
description = "A Tauri App"
authors = ["XingGao"]
license = "MIT"
repository = "https://github.com/xinggaoya/sing-box-windows"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.214", features = ["derive"] }
# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "local-time"] }
base64 = "0.13.0"
sha2 = "0.10"
semver = "1.0"

tauri = { version = "2", features = ["tray-icon", "unstable", "devtools"] }
reqwest = { version = "0", features = ["json", "stream", "native-tls-vendored"] }
dirs = "5.0.1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
futures = "0.3"
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
url = "2"
urlencoding = "2.1"
zip = { version = "0.5.13" }
flate2 = "1.0"
tar = "0.4"
walkdir = "2.3"
lazy_static = "1.4.0"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
winapi = { version = "0.3", features = ["wininet"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["user"] }
which = "7.0"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS特定依赖
core-foundation = "0.9"
security-framework = "2.9"

# 通用插件依赖
[dependencies]
tauri-plugin-store = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-websocket = "2"

# 性能优化配置
[profile.dev]
# 开发模式优化：保持编译速度的同时提升运行性能
opt-level = 1
debug = true
lto = false

[profile.release]
# 发布模式优化：最大化运行时性能
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
