[package]
name = "sing-box-windows"
version = "2.1.0"
description = "A Tauri App"
authors = ["XingGao"]
license = "MIT"
repository = "https://github.com/xinggaoya/sing-box-windows"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# 使用最新稳定版本
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
ts-rs = "11.1"
# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "local-time"] }
base64 = "0.22"
sha2 = "0.10"
semver = "1.0"
serde_yaml = "0.9"

# Tauri 2.0 最新版本
tauri = { version = "2.2", features = ["tray-icon", "unstable", "devtools"] }
reqwest = { version = "0.12", features = ["json", "stream", "native-tls-vendored"] }
dirs = "5.0.1"
tokio = { version = "1.48", features = ["full"] }
futures-util = "0.3"
futures = "0.3"
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
url = "2.5"
urlencoding = "2.1"
zip = "2.2"
flate2 = "1.0"
tar = "0.4"
walkdir = "2.5"
lazy_static = "1.5"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4.42", features = ["serde"] }
thiserror = "2.0"
tauri-plugin-store = "2.2"
tauri-plugin-os = "2.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
winapi = { version = "0.3", features = ["wininet"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.2"
tauri-plugin-single-instance = "2.2"
tauri-plugin-window-state = "2.2"
tauri-plugin-websocket = "2.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["user"] }
which = "7.0"
keyring = "3.6.3"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS特定依赖
core-foundation = "0.9"
security-framework = "2.9"

# 性能优化配置
[profile.dev]
# 开发模式优化：保持编译速度的同时提升运行性能
opt-level = 1
debug = true
lto = false

[profile.release]
# 发布模式优化：最大化运行时性能
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
